Bug 299901 - Cube animation on border approach should not be used unless the electric borders are actually in use and the config should be disabled, align or hint the electric border configuration
Summary: Cube animation on border approach should not be used unless the electric bord...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.8.2
Platform: unspecified Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL: http://img513.imageshack.us/img513/63...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-12 18:28 UTC by Meconio
Modified: 2013-02-07 09:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:
thomas.luebking: Triaged+
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Meconio 2012-05-12 18:28:20 UTC
Hi, i'm not sure this iis the right section. i had this bug:

http://img513.imageshack.us/img513/6373/schermata1j.jpg

When i try to move windows to border for changing face of 3d cube the animation not work and stop like the image. When release mouse button the windows return to the same face of cube.

Here another example:
http://img708.imageshack.us/img708/298/schermata2j.jpg

This distro is Kubuntu 12 but i have same problem in gentoo.

My video card is a nvidia 8800gts 512 the driver that i use is official nvidia and everything all work except this animattion.

Reproducible: Always

Steps to Reproduce:
1.Grab title of window
2. move to border
3. 
Actual Results:  
animation stop in the middle

Expected Results:  
Windows moving from one face to another one
Comment 1 Meconio 2012-05-12 18:29:31 UTC
Kde version 4.8.2
Comment 2 Thomas Lübking 2012-05-12 20:30:06 UTC
sounds a bit like bug #299869
can you "kcmshell4 kwincompositing" and uncheck opengl2 shaders in the 3rd tab?
does the issue remain afterwards?
Comment 3 Meconio 2012-05-13 16:32:03 UTC
Yes, i have tried now your suggestion. Nothing is changed.
Comment 4 Meconio 2012-05-14 10:49:22 UTC
Today ive seen the same bug in my office kubuntu installation. This pc is a core duo with an ati video card with driver fglrx kde version is 4.8.2.

Here a screenshot:

http://img10.imageshack.us/img10/6590/bugkde.jpg
Comment 5 Meconio 2012-05-14 11:10:59 UTC
I've found the problem:

http://img3.imageshack.us/img3/7504/solution1a.jpg

This option conflicts.

If you enable "Start animation when move windows to edge" in "Desktop effects" but you don't enable Change desktop on screen edge from another panel the animation stops in the middle.

I've kde in italian the section name probably isn't correct in english i hope screenshot help you.
Comment 6 Martin Flöser 2013-01-30 12:40:43 UTC
https://git.reviewboard.kde.org/r/108671/
Comment 7 Martin Flöser 2013-02-07 09:15:29 UTC
Git commit af12bc6029bb2cfe843a2dc7faa586418ad25459 by Martin Gräßlin.
Committed on 30/01/2013 at 13:36.
Pushed by graesslin into branch 'master'.

Only start animating in cube slide on window move if core uses switch desktop on edge

For this new KWinOptions are exposed to query whether core uses switch on
desktop on move or always.
FIXED-IN: 4.11
REVIEW: 108671

M  +4    -0    kwin/effects.cpp
M  +4    -0    kwin/effects/cube/cubeslide.cpp
M  +3    -1    kwin/libkwineffects/kwinglobals.h

http://commits.kde.org/kde-workspace/af12bc6029bb2cfe843a2dc7faa586418ad25459