Only start animating in cube slide on window move if core uses switch desktop on edge

For this new KWinOptions are exposed to query whether core uses switch on
desktop on move or always.

BUG: 299901
FIXED-IN: 4.11
REVIEW: 108671